# srr

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/sample_project/config/: app.toml
examples/sample_project/docs/: setup.md
examples/sample_project/duplicate_test/: README_COPY.md  README_SIMILAR.md
examples/sample_project/src/: lib.rs  main.rs
examples/sample_project/src/api/: middleware.rs  routes.rs
examples/sample_project/src/auth/: login.rs  mod.rs  oauth.rs  signup.rs
examples/sample_project/src/db/: migrations.rs  models.rs
examples/sample_project/src/services/: user_service.rs
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  pipeline.rs  theme.rs  types.rs  ui.rs
src/agent/: mod.rs
src/architecture/: detector.rs  graph.rs  mod.rs
src/clustering/: domain.rs  mod.rs
src/compressors/: code.rs  doc.rs  log.rs  mod.rs
src/context/: json.rs  markdown.rs  mod.rs
src/dedup/: exact.rs  mod.rs  near.rs
src/graph/: mod.rs
src/index/: mod.rs
src/llm/: mod.rs
src/metrics/: calculator.rs  mod.rs
src/pattern/: crud.rs  mod.rs
src/scanner/: mod.rs  walker.rs
src/scoring/: mod.rs  ranker.rs
src/storage/: mod.rs
src/task/: mod.rs
src/tokenizer/: estimator.rs  mod.rs  pricing.rs
src/tui/: approval.rs  autocomplete.rs  commands.rs  conversation.rs  help.rs  input.rs  keybind.rs  layout.rs  markdown.rs  mod.rs  status.rs  title.rs
src/verify/: mod.rs
tests/: config_test.rs  context_test.rs  crud_test.rs  dedup_test.rs  doc_compress_test.rs  gitignore_test.rs  graph_test.rs  include_test.rs  integration_test.rs  scanner_test.rs  scoring_test.rs  tokenizer_test.rs
themes/: catppuccin-macchiato.json  gruvbox-dark.json  tokyonight.json
(+1 files in other folders)
