[package]
name = "srr"
version = "0.1.0"
resolver = "2"
edition = "2021"
description = "SRR - AI Coding Agent Platform: repository intelligence, semantic indexing, agent runtime, vector search, and LLM context compression"
authors = ["SRR Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/user/srr"
repository = "https://github.com/user/srr"
documentation = "https://docs.rs/srr"
keywords = ["context", "compressor", "llm", "token", "analysis"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "compress-context"
path = "src/main.rs"

[badges]
github-actions = { repository = "user/srr", workflow = "CI" }

[package.metadata.docs.rs]
all-features = true

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
walkdir = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"
tiktoken-rs = "0.9"
petgraph = "0.8"
anyhow = "1"
thiserror = "1"
colored = "2"
indicatif = "0.17"
ignore = "0.4"
globset = "0.4"
toml = "0.8"
flate2 = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
glob = "0.3"
tree-sitter = "0.24"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
ratatui = "0.29"
crossterm = "0.28"
textwrap = "0.16"
notify = "6"
pulldown-cmark = "0.12"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
